# course_paper_6

./: .env.sample  README.md  data.json  manage.py  pyproject.toml
blog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_options_blogpost_is_published.py
blog/templatetags/: my_tags.py
mailing/: admin.py  forms.py  models.py  send_mailing.py  services.py  urls.py  views.py
mailing/migrations/: 0001_initial.py  0002_alter_mailingsettings_first_datetime.py  0002_remove_mailingmessage_recipients.py  0002_remove_mailingsettings_mailing_recipients_and_more.py  0003_alter_mailingsettings_recipients.py  0003_mailingsettings_recipients_and_more.py  0003_mailingstatus_mailing_id_alter_mailingstatus_status.py  0004_alter_mailingstatus_status.py  0005_mailingstatus_next_datetime.py  0006_alter_mailingstatus_status.py  0007_remove_mailingstatus_next_datetime.py  0008_mailingsettings_next_datetime.py  0009_mailingmessage_creator_mailingsettings_creator.py  0010_alter_mailingsettings_options.py  0011_alter_mailingsettings_settings_status.py
mailing_list_service/: asgi.py  settings.py  urls.py  wsgi.py
recipients/: admin.py  forms.py  models.py  urls.py  views.py
recipients/migrations/: 0001_initial.py  0002_alter_recipients_email.py  0002_recipients_creator.py  0002_remove_recipients_mailing_settings.py  0003_remove_recipients_creator.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_alter_user_options.py
(+26 files in other folders)
