[tool.poetry]
name = "course-paper-6"
version = "0.1.0"
description = ""
authors = ["Nikolay Averin <rizzzon116@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
psycopg2-binary = "^2.9.9"
pytz = "^2024.1"
django-apscheduler = "^0.6.2"
python-dateutil = "^2.9.0.post0"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
